feat(collection): add JMH benchmarks and harden unit tests
Improve release readiness by fixing concurrency correctness, aligning Trie.delete semantics,
and documenting experimental APIs.

Made-with: Cursor